--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>%MODE% | React 개발을 위한 Vite custom template 작성하기</title>
     <link rel="shortcut icon" href="favicon.svg" />
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="src/main.jsx"></script>
   </head>
   <body>
     <noscript>이 앱은 JavaScript 활성화가 필요합니다.</noscript>
